# reposcope

./: AGENTS.md  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml  reposcope.yml
specs/: 00-mvp.md  README.md
src/: cli.rs  contributors.rs  github.rs  lib.rs  main.rs  star_history.rs  svg.rs
tests/: contributors_mock.rs  golden.rs  star_history_mock.rs
